--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -309,15 +309,8 @@
 .post-selection {
 	margin: 40px 0 15px;
 
-	.post {
-		text-align: center;
-
-		img {
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-			object-position: center;
-		}
+	.single-post & {
+		margin: 0 0 15px;
 	}
 }
 
@@ -413,11 +406,11 @@
 			max-width: 740px;
 		}
 	}
+}
 
-	.feed-get-more {
-		text-align: center;
-		clear: both;
-	}
+.feed-get-more {
+	text-align: center;
+	clear: both;
 }
 
 .timeline-item {
@@ -690,7 +683,7 @@ p.media-caption {
 
 	@include breakpoint(md) {
 		max-width: 700px;
-		margin: 0 auto 40px;
+		margin: 0 auto 20px;
 	}
 }
 
@@ -735,8 +728,9 @@ p.media-caption {
 	text-align: center;
 	.entry-meta {
 		border-top: 1px solid $fourth-dark;
-		padding-top: 24px;
+		border-bottom: 1px solid $fourth-dark;
 		margin-bottom: 0;
+		padding-bottom: 15px;
 	}
 }
 
