--- a/style-human.css
+++ b/style-human.css
@@ -1824,16 +1824,8 @@ img.alignright,
 .post-selection {
   margin: 40px 0 15px;
 }
-.post-selection .post {
-  text-align: center;
-}
-.post-selection .post img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
+.single-post .post-selection {
+  margin: 0 0 15px;
 }
 
 /* ## Sections : Two/Dual Blocks
@@ -1914,7 +1906,8 @@ img.alignright,
 .feed.feed-timeline .wrap {
   max-width: 740px;
 }
-.feed .feed-get-more {
+
+.feed-get-more {
   text-align: center;
   clear: both;
 }
@@ -2186,7 +2179,7 @@ p.media-caption {
 @media (min-width: 1023px) {
   .entry {
     max-width: 700px;
-    margin: 0 auto 40px;
+    margin: 0 auto 20px;
   }
 }
 
@@ -2232,8 +2225,9 @@ p.media-caption {
 }
 .entry-footer .entry-meta {
   border-top: 1px solid rgba(62, 62, 62, 0.08);
-  padding-top: 24px;
+  border-bottom: 1px solid rgba(62, 62, 62, 0.08);
   margin-bottom: 0;
+  padding-bottom: 15px;
 }
 
 .entry-categories,
