added wrapper for responsive embed

--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -589,7 +589,7 @@ p.media-caption {
 	margin: 10px 0;
 }
 
-.video-embed-responsive {
+.embed-responsive {
 	position: relative;
     padding-bottom: 56.25%;
     padding-top: 35px;
