--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -2058,14 +2058,14 @@ p.media-caption {
   margin: 10px 0;
 }
 
-.video-embed-responsive {
+.embed-responsive {
   position: relative;
   padding-bottom: 56.25%;
   padding-top: 35px;
   height: 0;
   overflow: hidden;
 }
-.video-embed-responsive iframe {
+.embed-responsive iframe {
   position: absolute;
   top: 0;
   left: 0;
