--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -196,6 +196,7 @@
 .entry-tags {
 	margin: 15px 0 0 0;
 	color: $white;
+	display: block;
 
 	a {
 		display: inline-block;
@@ -207,7 +208,13 @@
 		text-decoration: none;
 		font-weight: $font-weight-bold;
 		opacity: .86;
+
+		.single-post & {
+			background-color: $fourth-dark;
+			color: $secondary-dark;
+		}
 	}
+
 }
 
 .overlay {
@@ -716,6 +723,7 @@ p.media-caption {
 
 .entry-header {
 	text-align: center;
+
 	.entry-meta {
 		margin-bottom: 15px;
 		@include font-size($font-size-xs);
@@ -726,17 +734,14 @@ p.media-caption {
 
 .entry-footer {
 	text-align: center;
+	margin-top: 20px;
+	
 	.entry-meta {
 		border-top: 1px solid $fourth-dark;
 		border-bottom: 1px solid $fourth-dark;
 		margin-bottom: 0;
 		padding-bottom: 15px;
 	}
-}
-
-.entry-categories,
-.entry-tags {
-	display: block;
 }
 
 .entry-comments-link::before {
