added a possibility for drilldown JS redirect but deactivated for now

--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -544,6 +544,15 @@
 	}
 }
 
+.join-us-form {
+	max-width: 200px;
+	margin: 0 auto;
+
+	#join-us-select {
+		margin-bottom: 20px;
+	}
+}
+
 .kpi-banner {
 	padding: 40px 0;
 	text-align: center;
