--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -691,6 +691,22 @@ p.media-caption {
 	}
 }
 
+/* ## Signature Form Block
+--------------------------------------------- */
+
+.signature-block {
+	margin-bottom: 40px;
+
+	.wrap {
+		max-width: 700px;
+
+		.gform_wrapper .top_label input.medium, 
+		.gform_wrapper .top_label select.medium {
+			width: 100%;
+		}
+	}
+}
+
 /* ## Entries
 --------------------------------------------- */
 
