--- a/style-human.css
+++ b/style-human.css
@@ -2221,6 +2221,34 @@ p.media-caption {
   width: 100%;
 }
 
+/* ## Signature Listing
+--------------------------------------------- */
+.nav-listing-signatures ol.nav {
+  width: 100;
+  margin: 0 auto;
+}
+.nav-listing-signatures ol.nav li {
+  display: inline-block;
+  font-size: 16px;
+  font-size: 1.6rem;
+  margin-bottom: 8px;
+  margin-right: 8px;
+  float: left;
+  list-style: none;
+}
+.nav-listing-signatures ol.nav li a {
+  text-decoration: none;
+}
+
+.listing-signatures {
+  clear: left;
+}
+.listing-signatures li {
+  float: left;
+  width: 9%;
+  margin: 0 1% 10px 0;
+}
+
 /* ## Entries
 --------------------------------------------- */
 .entry {
