small css fixes for h2 and text block

--- a/sass/partials/_4_general.scss
+++ b/sass/partials/_4_general.scss
@@ -134,7 +134,7 @@ h2 {
 	@include font-size($font-size-l);
 	text-transform: uppercase;
 	font-weight: $font-weight-normal;
-
+	margin-top: 20px;
 
 	&:after {
 		content: "";
