--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -408,6 +408,7 @@ h2 {
   font-size: 3rem;
   text-transform: uppercase;
   font-weight: 400;
+  margin-top: 20px;
 }
 h2:after {
   content: "";
@@ -1746,7 +1747,7 @@ img.alignright,
 /* ## Sections : Text Blocks
 --------------------------------------------- */
 .text-block {
-  margin: 40px auto 20px;
+  margin: 20px auto 20px;
   text-align: center;
   max-width: 700px;
 }
@@ -2105,7 +2106,7 @@ p.media-caption {
   .user-list,
   .institution-list,
   .signatures-list {
-    padding: 40px 0;
+    margin: 40px 0;
   }
 }
 
