--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -225,7 +225,7 @@
 --------------------------------------------- */
 
 .text-block {
-	margin: 40px auto 20px;
+	margin: 20px auto 20px;
 	text-align: center;
 	max-width: 700px;
 
@@ -632,7 +632,7 @@ p.media-caption {
 	padding: 0;
 
 	@include breakpoint(xs) {
-		padding: 40px 0;
+		margin: 40px 0;
 	}
 }
 
