added rosace and hashtag to footer

--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -1416,7 +1416,8 @@ img.alignright,
 /* # Footer Widgets
 ---------------------------------------------------------------------------------------------------- */
 .footer-widgets {
-  background-color: #3E3E3E;
+  background: #3E3E3E url("images/c1sh-rosace-black.png") no-repeat top center;
+  background-size: 50%;
   color: #EBEBEB;
   font-size: 14px;
   font-size: 1.4rem;
@@ -1507,7 +1508,7 @@ img.alignright,
   }
 }
 
-/* # Site Footer
+/* # Site Footer - below footer-widgets
 ---------------------------------------------------------------------------------------------------- */
 .site-footer {
   background-color: #3E3E3E;
@@ -1521,6 +1522,10 @@ img.alignright,
 }
 .site-footer p {
   margin-bottom: 0;
+  background: url(images/c1sh-appeldifference.png) no-repeat top center;
+  background-size: 50%;
+  padding-top: 140px;
+  height: 170px;
 }
 
 /* # Content Area
