--- a/sass/partials/_7_footer.scss
+++ b/sass/partials/_7_footer.scss
@@ -13,7 +13,8 @@
 ---------------------------------------------------------------------------------------------------- */
 
 .footer-widgets {
-	background-color: $base-dark;
+	background: $base-dark url('images/c1sh-rosace-black.png') no-repeat top center;
+	background-size: 50%;
 	color: $base-light;
 	@include font-size($font-size-xs);
 	clear: both;
@@ -110,7 +111,7 @@
 }
 
 
-/* # Site Footer
+/* # Site Footer - below footer-widgets
 ---------------------------------------------------------------------------------------------------- */
 
 .site-footer {
@@ -124,5 +125,9 @@
 
 	p {
 		margin-bottom: 0;
+		background: url(images/c1sh-appeldifference.png) no-repeat top center;
+		background-size: 50%;
+		padding-top: 140px;
+		height: 170px;
 	}
 }
