--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -434,6 +434,7 @@ h4 {
 h5 {
   font-size: 16px;
   font-size: 1.6rem;
+  text-transform: uppercase;
 }
 
 h6 {
@@ -2210,7 +2211,7 @@ p.media-caption {
 /* ## Signature Listing
 --------------------------------------------- */
 .nav-listing-signatures ol.nav {
-  width: 100;
+  width: 260px;
   margin: 0 auto;
 }
 .nav-listing-signatures ol.nav li {
