--- a/sass/partials/_7_footer.scss
+++ b/sass/partials/_7_footer.scss
@@ -13,12 +13,21 @@
 ---------------------------------------------------------------------------------------------------- */
 
 .footer-widgets {
-	background: $base-dark url('images/c1sh-rosace-black.png') no-repeat top center;
+	background-color: $base-dark;
 	background-size: 50%;
 	color: $base-light;
 	@include font-size($font-size-xs);
 	clear: both;
 	padding: 30px 0;
+	margin-top: 10px;
+
+	.home & {
+		margin-top: 0px;
+	}
+
+	@include breakpoint(sm) {
+		background: $base-dark url('images/c1sh-rosace-black.png') no-repeat top center;
+	}
 
 	.widget {
 		padding-bottom: 10px;
@@ -125,9 +134,12 @@
 
 	p {
 		margin-bottom: 0;
-		background: url(images/c1sh-appeldifference.png) no-repeat top center;
-		background-size: 50%;
-		padding-top: 140px;
-		height: 170px;
+
+		@include breakpoint(sm) {
+			background: url(images/c1sh-appeldifference.png) no-repeat top center;
+			background-size: 50%;
+			padding-top: 140px;
+			height: 170px;
+		}
 	}
 }
