--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -413,9 +413,11 @@ h2 {
 h2:after {
   content: "";
   display: block;
-  width: 80px;
+  width: 130px;
   margin: 15px auto 15px;
-  border-top: 1px solid #E4003F;
+  background: url("images/c1sh-line-l.jpg") no-repeat;
+  background-size: 130px;
+  height: 10px;
 }
 
 h3 {
