--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,11 +1,11 @@
 /*!
-	Theme Name: COMMEUNSEULHOMME
+	Theme Name: C1SH-v1.0.4
 	Theme URI: https://www.commeunseulhomme.com/
 	Description: Theme Wordpress de COMMEUNSEULHOMME.
 	Author: Bruno Boehm, Lyketil
 	Author URI: https://www.lyketil.com/
 
-	Version: 1.0.3
+	Version: 1.0.4
 
 	Tags: responsive-layout, accessibility-ready, translation-ready
 
