--- a/sass/partials/_2_variables.scss
+++ b/sass/partials/_2_variables.scss
@@ -4,7 +4,8 @@
 /* ### Colors */
 
 $primary-color: #E4003F;
-$secondary-color: #02ccff;
+$secondary-color: #02aad4;
+// $secondary-color: #02ccff;
 // Martin utilise: #02ccff
 // Vert canard d'origine: #0099AF
 $accent-color: #E4003F;
