--- a/sass/partials/_1_mixins.scss
+++ b/sass/partials/_1_mixins.scss
@@ -27,7 +27,7 @@
         left: 0;
         height: 100%;
         width: 100%;
-        background-color: rgba(0,0,0, 0.15);
+        background: linear-gradient(to bottom, rgba(255,255,255,0) 75%, rgba(0,0,0,0.4) 100%);
     }
 }
 
