--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -103,7 +103,7 @@
 	min-height: 260px;
 
 	.page-template & {
-		padding: 25% 0 3%;
+		padding: 32% 0 1%;
 	}
 
 	@include breakpoint(sm) {
@@ -141,13 +141,20 @@
 
 		h1 {
 			color: white;
+			text-transform: uppercase;
 			max-width: 700px;
 			margin: 0 auto 20px;
 			@include font-size($font-size-m);
 			@include breakpoint(sm){
-				@include font-size($font-size-l);
+				@include font-size($font-size-xl);
 			}
 			text-shadow: 1px 1px 2px $secondary-dark;
+
+			&.title-hide {
+				text-indent: -4000px;
+				height: 0px;
+				margin-top: -50px;
+			}
 		}
 
 		.brand-logos {
