--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -95,16 +95,11 @@
 --------------------------------------------- */
 .hero-section {
 	position: relative;
-	padding: 11% 0 7%;
 	background-position: center;
 	background-size: cover;
 	transition: all .1s ease;
 	text-align: center;
 	min-height: 260px;
-
-	.page-template & {
-		padding: 32% 0 1%;
-	}
 
 	@include breakpoint(sm) {
 		min-height: 400px;
@@ -137,18 +132,25 @@
 	}
 
 	.wrap {
-		position: relative;
+		position: absolute;
+		bottom: 40px;
+		left: 0;
+		right: 0;
+		margin: 0 auto;
+		width: 100%;
+		display: block;
 
 		h1 {
 			color: white;
 			text-transform: uppercase;
-			max-width: 700px;
+			text-align: center;
 			margin: 0 auto 20px;
+			max-width: 700px;
 			@include font-size($font-size-m);
 			@include breakpoint(sm){
 				@include font-size($font-size-xl);
 			}
-			text-shadow: 1px 1px 2px $secondary-dark;
+			text-shadow: 1px 1px 3px $secondary-dark;
 
 			&.title-hide {
 				text-indent: -4000px;
