make a  responsive overlay on header

--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -227,7 +227,10 @@
 }
 
 .overlay {
-	@include overlay;
+	@include overlay-flat;
+	@include breakpoint(sm){
+		@include overlay;
+	}
 }
 
 /* ## Sections : Text Blocks
