--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -1768,7 +1768,27 @@ img.alignright,
   left: 0;
   height: 100%;
   width: 100%;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 75%, rgba(0, 0, 0, 0.4) 100%);
+  background: rgba(0, 0, 0, 0.5);
+}
+@media (min-width: 860px) {
+  .overlay {
+    position: relative;
+  }
+  .overlay * {
+    position: relative;
+    z-index: 1;
+  }
+  .overlay:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 60%, rgba(0, 0, 0, 0.4) 100%);
+  }
 }
 
 /* ## Sections : Text Blocks
