--- a/sass/partials/_1_mixins.scss
+++ b/sass/partials/_1_mixins.scss
@@ -27,7 +27,26 @@
         left: 0;
         height: 100%;
         width: 100%;
-        background: linear-gradient(to bottom, rgba(255,255,255,0) 75%, rgba(0,0,0,0.4) 100%);
+        background: linear-gradient(to bottom, rgba(255,255,255,0) 60%, rgba(0,0,0,0.4) 100%);
+    }
+}
+
+@mixin overlay-flat {
+    position: relative;
+    * {
+        position: relative;
+        z-index: 1;
+    }
+    &:after {
+        content: " ";
+        display: block;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background: rgba(0, 0, 0, 0.5);
     }
 }
 
