--- a/style-human.css
+++ b/style-human.css
@@ -1782,8 +1782,28 @@ img.alignright,
   left: 0;
   height: 100%;
   width: 100%;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(75%, rgba(255, 255, 255, 0)), to(rgba(0, 0, 0, 0.4)));
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 75%, rgba(0, 0, 0, 0.4) 100%);
+  background: rgba(0, 0, 0, 0.5);
+}
+@media (min-width: 860px) {
+  .overlay {
+    position: relative;
+  }
+  .overlay * {
+    position: relative;
+    z-index: 1;
+  }
+  .overlay:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(60%, rgba(255, 255, 255, 0)), to(rgba(0, 0, 0, 0.4)));
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 60%, rgba(0, 0, 0, 0.4) 100%);
+  }
 }
 
 /* ## Sections : Text Blocks
