--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -99,15 +99,8 @@
 	background-size: cover;
 	transition: all .1s ease;
 	text-align: center;
-	min-height: 260px;
-
-	@include breakpoint(sm) {
-		min-height: 400px;
-	}
-
-	@include breakpoint(md) {
-		min-height: 540px;
-	}
+	width: 100%;
+    padding-top: 37%; /* Aspect Ratio */
 
 	.wp-custom-header {
 		position: absolute;
@@ -139,6 +132,15 @@
 		margin: 0 auto;
 		width: 100%;
 		display: block;
+
+		a {
+			display: none;
+		}
+		@include breakpoint(sm) {
+			a {
+				display: inline;
+			}
+		}
 
 		h1 {
 			color: white;
@@ -186,21 +188,26 @@
 		}
 
 		.related-actions {
-			a {
-				color: white;
-				text-decoration: none;
-				text-transform: uppercase;
-				margin:	2px 10px;
-				display: inline-block;
-			}
+			display:none;
 
-			&:before {
-				content: "";
+			@include breakpoint(sm){
 				display: block;
-				width: 40px;
-				border-top: 1px solid $white;
-				margin: 0 auto;
-				padding-top: 20px;
+				a {
+					color: white;
+					text-decoration: none;
+					text-transform: uppercase;
+					margin:	2px 10px;
+					display: inline-block;
+				}
+
+				&:before {
+					content: "";
+					display: block;
+					width: 40px;
+					border-top: 1px solid $white;
+					margin: 0 auto;
+					padding-top: 20px;
+				}
 			}
 		}
 
