--- a/sass/partials/_11_media-queries.scss
+++ b/sass/partials/_11_media-queries.scss
@@ -1,7 +1,7 @@
 /* # Media Queries
 ---------------------------------------------------------------------------------------------------- */
 
-@media only screen and (max-width: 1340px) {
+@media only screen and (min-width: 1201px) {
 
     .site-inner,
     .wrap {
