--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -20,7 +20,7 @@
 
 .tile-shadow {
     position: relative;
-	box-shadow: 0 2rem 5rem -2.5rem rgba(0,0,0,0.03), 0rem 0.3rem 0.5rem -0.4rem rgba(0,0,0,0.03);
+	box-shadow: 0 2rem 5rem -2.5rem $fourth-dark, 0rem 0.3rem 0.5rem -0.4rem $fourth-dark;
 }	
 
 .blurb {
