--- a/sass/partials/_4_general.scss
+++ b/sass/partials/_4_general.scss
@@ -321,6 +321,11 @@ input[type="submit"],
 		color: $primary-color;
 		border: 1px solid $primary-color;
 	}
+
+	&.button--secondary {
+		background-color: $secondary-color;
+		border: 1px solid $secondary-color;
+	}
 }
 
 button:hover,
