--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -366,6 +366,10 @@
 	margin: 20px 0 40px;
 }
 
+.three-blurbs--storyboard {
+	margin: -40px 0 40px;
+}
+
 /* ## Sections : Post Selection
 --------------------------------------------- */
 
