--- a/style-human.css
+++ b/style-human.css
@@ -1902,6 +1902,10 @@ img.alignright,
   margin: 20px 0 40px;
 }
 
+.three-blurbs--storyboard {
+  margin: -40px 0 40px;
+}
+
 /* ## Sections : Post Selection
 --------------------------------------------- */
 .post-selection {
