--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -2154,6 +2154,7 @@ img.alignright,
     height: 100px;
     left: -100px;
     top: 15px;
+    animation: float 3s ease-in-out infinite;
   }
   .video-cta-banner .video-cta-banner__cta-block .button {
     margin-top: 50px;
