--- a/style-human.css
+++ b/style-human.css
@@ -1904,11 +1904,12 @@ img.alignright,
 }
 
 .three-blurbs--storyboard {
-  margin: -40px 0 40px;
+  margin: -40px 0 0;
 }
 .three-blurbs--storyboard .blurb img {
   width: auto;
-  height: 150px;
+  height: 160px;
+  margin-top: 14px;
 }
 @media (min-width: 860px) {
   .three-blurbs--storyboard .one-third:first-of-type .blurb::after,
